# datastr2024

./: CMakeLists.txt  main.cpp
